# question_bank_auto

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.cmd  agent.ps1  docker-compose.yml  docker-entrypoint.sh
ML/: 1.json
agent_service/: .env.example  MCP.md  README.md  SKILL.md  WINDOWS-STARTUP.md  download_clip_model.py  pyproject.toml  start-agent.ps1  start-reply-bot.ps1  stop-agent.ps1  stop-reply-bot.ps1
agent_service/src/feishu_agent/: __init__.py  app.py  ark_client.py  auto_reply.py  cli_runner.py  config.py  errors.py  harness.py  mcp_http.py  persona.py  prompting.py  schemas.py  service.py  shell.py  store.py  tool_executor.py  tool_registry.py  voice.py  workspace_api.py
agent_service/src/feishu_agent/skills/: __init__.py  base.py  conversation.py  feishu_calendar.py  feishu_contact.py  feishu_docs.py  feishu_im.py  feishu_search.py  question_bank_mcp.py  textbook_pipeline.py  workspace_management.py
agent_service/tests/: test_feishu_im_skill.py  test_harness.py  test_reply_client.py  test_send_dm_history.py  test_store.py  test_textbook_pipeline_skill.py  test_tool_executor.py  test_workspace_management_skill.py
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  ark-request-context.ts  ark-responses-prefix-experiment-service.ts  config.ts  exam-section-compose-service.ts  server.ts  (+26 more)
data/: question_bank.sqlite
frontend/: index.html  package-lock.json  package.json  vite.config.js
points/: README.md  数学分析-上册-知识点.md  数学分析-下册-知识点.md
runtime_cache/: ark_responses_prefix_experiment.json
(+45 files in other folders)
